tests/fail_parse.fo
fun int main() =
  let n =  in
  write(2)
